[package]
name = "raft_small_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kompact                 = { git = "https://github.com/johanmallobakken/kompact"}
#kompact 				= { git = "https://github.com/kompics/kompact", rev = "94956af23a8a5d30c968e707512b4f9d74dea99d" }
#kompact                 = {git = "https://github.com/kompics/kompact"}
protobuf                = "2"
futures         		= "0.1"
futures-cpupool 		= "0.1"
synchronoise 			= "1.0"
time 					= "0.1"
num_cpus 				= "1"
parse_duration 			= "2"
rand 					= {version = "0.7", features = ["small_rng"]}
chrono                  = "0.4"
raft-proto              = "0.6.0"
#raft                    = {git = "https://github.com/tikv/raft-rs", rev = "74f6aa43812a1c7809366079f84a6de28dfcf18e"} 
raft = { git = "https://github.com/tikv/raft-rs" }
uuid                    = { version = "0.8", features = ["v4"] }
memmap                  = "0.7.0"
hashbrown               = "0.8.0"
indexmap                = "1.4.0"
hdrhistogram            = "6.0"
hocon 					= {version = "0.3.6", default-features = false}
quanta                  = {version = "0.6.5", optional = true}
leaderpaxos             = { git = "https://github.com/haraldng/omnipaxos", rev = "974b7ff24519b062a17faee5eb5c4443fa6cb5a2",  features = ["batch_accept"] }
regex = "1.6.0"
slog-async = "2.3.0"
slog = "2.2"
slog-envlogger = { version = "2.1.0", optional = true }
slog-stdlog = { version = "4", optional = true }
slog-term = "2.9.0"